--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -10,33 +9,36 @@ $desktop-primary: mat.define-palette(palette.$grey-palette);
 $desktop-accent: mat.define-palette(palette.$green-palette, 400, 900, A700);
 $desktop-warn: mat.define-palette(mat.$red-palette);
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-// $desktop-primary: mat.define-palette(mat.$indigo-palette);
-// $desktop-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
 $desktop-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$desktop-theme: mat.define-light-theme((
-  color: (
-    primary: $desktop-primary,
-    accent: $desktop-accent,
-    warn: $desktop-warn,
+$desktop-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $desktop-primary,
+      accent: $desktop-accent,
+      warn: $desktop-warn,
+    ),
   )
-));
+);
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include mat.all-component-themes($desktop-theme);
 
 /* You can add global styles to this file, and also import other style files */
 @import './scss/default';
+@import './scss/flexbox';
+@import './scss/media';
 
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.hidden {
+  display: none !important;
+}
+
