--- a/libs/meet/feature/src/lib/meet-feature.component.scss
+++ b/libs/meet/feature/src/lib/meet-feature.component.scss
@@ -2,18 +2,19 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  color: #666;
 
   .mat-mdc-card {
     width: 100%;
   }
 
+  main {
+    padding: 18px;
+  }
+
   form {
     width: 100%;
     display: flex;
-    column-gap: 36px;
+    column-gap: 18px;
     height: inherit;
   }
 }
