--- a/libs/meet/feature/src/lib/settings/settings.component.html
+++ b/libs/meet/feature/src/lib/settings/settings.component.html
@@ -2,7 +2,11 @@
 <nav>
   <mat-nav-list>
     <a mat-list-item routerLink="audio">Áudio</a>
-    <a mat-list-item [routerLink]="['/','settings','video', { relativeTo: route }]">Vídeo</a>
+    <a
+      mat-list-item
+      [routerLink]="['/', 'settings', 'video', { relativeTo: route }]"
+      >Vídeo</a
+    >
   </mat-nav-list>
 </nav>
 
