--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -27,6 +27,8 @@ $desktop-theme: mat.define-light-theme(
 @import './scss/default';
 @import './scss/flexbox';
 @import './scss/media';
+@import './scss/components/icon';
+@import './scss/components/button';
 
 html,
 body {
@@ -35,7 +37,7 @@ body {
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .hidden {
