--- a/libs/auth/feature/src/lib/components/sign-in/sign-in.component.html
+++ b/libs/auth/feature/src/lib/components/sign-in/sign-in.component.html
@@ -4,10 +4,11 @@
       <mat-label>Usuário</mat-label>
       <input
         type="text"
+        id="username"
+        autocomplete="username"
+        formControlName="username"
         matInput
         autofocus
-        formControlName="username"
-        autocomplete="username"
       />
       <mat-error>Obrigatório</mat-error>
     </mat-form-field>
@@ -16,9 +17,10 @@
       <mat-label>Senha</mat-label>
       <input
         type="password"
+        id="current-password"
+        autocomplete="current-password"
         matInput
         formControlName="password"
-        autocomplete="current-password"
       />
       <mat-error>Mínimo de 6 caracteres</mat-error>
     </mat-form-field>
@@ -27,7 +29,7 @@
   <ng-content select="mat-error"></ng-content>
 
   <footer>
-    <a routerLink="/" mat-button>
+    <a routerLink="/" mat-button tabIndex="-1">
       <mat-icon>chevron_left</mat-icon>
       Voltar
     </a>
