--- a/libs/shared/ui-layout/src/lib/toolbar/toolbar.component.html
+++ b/libs/shared/ui-layout/src/lib/toolbar/toolbar.component.html
@@ -20,4 +20,5 @@
   <ng-content select="mat-icon"></ng-content>
   <ng-content select="[matMenuTriggerFor]"></ng-content>
   <ng-content select="mat-menu"></ng-content>
+  <ng-content select="contact-toolbar-dropdown"></ng-content>
 </mat-toolbar>
