--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -36,10 +36,18 @@ body {
 }
 body {
   margin: 0;
-  font-family: 'Lato', sans-serif;
-  font-size: 16px;
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 14px;
 }
 
 .hidden {
   display: none !important;
+}
+
+.muted {
+  opacity: 0.6;
+}
+
+.full {
+  width: 100%;
 }
