style: 💄 editor config line length

--- a/libs/user/feature/src/lib/components/search-user/search-user.component.html
+++ b/libs/user/feature/src/lib/components/search-user/search-user.component.html
@@ -11,8 +11,5 @@
       {{ option.displayName }}
     </mat-option>
   </mat-autocomplete>
-  <contact-svg-loader
-    [show]="(loader$ | async)"
-    matSuffix
-  ></contact-svg-loader>
+  <contact-svg-loader [show]="loader$ | async" matSuffix></contact-svg-loader>
 </mat-form-field>
