feat: nav drawer layout

--- a/libs/shared/ui-layout/src/lib/toolbar/toolbar.component.html
+++ b/libs/shared/ui-layout/src/lib/toolbar/toolbar.component.html
@@ -9,8 +9,8 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <a mediaQuery min="md" class="toolbar-go-back" [routerLink]="goBackRoute">
-    <object data="/assets/vectors/speek.svg"></object>
+  <a class="toolbar-go-back" [routerLink]="goBackRoute">
+    <object mediaQuery min="md" data="/assets/vectors/speek.svg"></object>
     <span>Speek Contact</span>
   </a>
 
