refactor: app styles

--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -26,6 +26,7 @@ $desktop-theme: mat.define-light-theme(
 /* You can add global styles to this file, and also import other style files */
 @import './scss/default';
 @import './scss/flexbox';
+@import './scss/utilities';
 @import './scss/media';
 @import './scss/components/icon';
 @import './scss/components/button';
