--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -9,7 +9,7 @@ $desktop-primary: mat.define-palette(palette.$grey-palette);
 $desktop-accent: mat.define-palette(palette.$green-palette, 400, 900, A700);
 $desktop-warn: mat.define-palette(mat.$red-palette);
 
-$desktop-warn: mat.define-palette(mat.$red-palette);
+$desktop-typography: mat.define-typography-config();
 
 $desktop-theme: mat.define-light-theme(
   (
@@ -18,6 +18,7 @@ $desktop-theme: mat.define-light-theme(
       accent: $desktop-accent,
       warn: $desktop-warn,
     ),
+    typography: $desktop-typography,
   )
 );
 
@@ -51,4 +52,30 @@ body {
 
 .full {
   width: 100%;
+}
+
+.card .p-0 .mat-expansion-panel-body {
+  padding: 0;
+  margin-bottom: -6px;
+}
+
+.mdc-list-item__primary-text {
+  display: flex;
+  align-items: center;
+  column-gap: 16px;
+
+  span {
+    width: calc(100% - 48px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.mat-mdc-tab-nav-bar {
+  padding: 0;
+  .mat-mdc-tab-link-container {
+    width: 100%;
+    padding: 8px;
+  }
 }
