--- a/libs/client/feature-user/src/lib/components/create-meeting/create-meeting.component.html
+++ b/libs/client/feature-user/src/lib/components/create-meeting/create-meeting.component.html
@@ -1,5 +1,5 @@
 <form novalidate [formGroup]="form" (ngSubmit)="onSubmit()">
-  <section class="flex row align-center gap-32">
+  <section class="flex col row-md-n-above align-center gap-32">
     <mat-form-field class="flex-1" appearance="fill">
       <mat-label>Dia</mat-label>
       <input
